# metronomek

./: .gitignore  .gitlab-ci.yml  .gitmodules  .qmlformat.ini  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Metronomek.pro  README.md  REUSE.toml  TODO.md  gradle.properties  main.cpp  main.qml  metronomek.pro  qml.qrc
.github/workflows/: packaging.yml
Sounds/: beat-basedrum.raw48-16  beat-clap.raw48-16  beat-drum1.raw48-16  beat-drum2.raw48-16  beat-drum3.raw48-16  beat-guitar.raw48-16  beat-snap.raw48-16  beat-sticks.raw48-16  ring-bell1.raw48-16  ring-bell2.raw48-16  ring-glass.raw48-16  ring-mug.raw48-16  ring-woodblock.raw48-16
android/: AndroidManifest.xml
android/assets/translations/: metronomek_pl.qm
images/: metronomek.icns  metronomek.rc  metronomek_images.qrc
installs/: android-translations-asset.sh  cmake_uninstall.cmake.in  info.plist.in  make-appimage.sh  make-runinplace.sh  make-src.sh  metronomek.desktop  metronomek.nsi
installs/Linux/: make-appimage.sh  net.sf.metronomek.appdata.xml  net.sf.metronomek.desktop
installs/Mac/: create-dmg.sh  info.plist.in
installs/Windows/: build_installer.ps1  definitions.nsh.in  metronomek.nsi
installs/android/: AndroidManifest.xml  build.gradle  gradle.properties
installs/android/res/xml/: file_paths.xml
resources/: metronomek_res.qrc
resources/flags/: README.md
sounds/: beat-classic.raw48-16  beat-icu.raw48-16  beat-midi.raw48-16  beat-parapet.raw48-16  beat-snaredrum.raw48-16  beat-sticks2.raw48-16  ring-bell.raw48-16  ring-harmonic.raw48-16  ring-hihat.raw48-16  ring-metal.raw48-16
sounds/counting/: README.md
spare_parts/: gen_android_icons.sh  gen_hicolorIcons.sh  metronomek.sfd
spare_parts/helpers/wavdirparser/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  DrawerButton.qml  InfoPage.qml  LinkText.qml  Logo.qml  MainDrawer.qml  MainDrawerContent.qml  MainMenuButton.qml  MainWindow.qml  MeterDrawer.qml  MetroImage.qml  SettingsPage.qml  TipRect.qml  TspinBox.qml  fromqt5lang.cpp  fromqt5lang.h  main.cpp  main.qml  metronomek.qrc  metronomek_conf.h.in  metronomek_conf_cmake.h.in  tabstractaudiodevice.cpp  tabstractaudiodevice.h  tabstractaudiooutput.cpp  tabstractaudiooutput.h  tandroid.cpp  tandroid.h  taudiobuffer.h  taudioout.cpp  taudioout.h  tcountingimport.cpp  tcountingimport.h  tcountingmanager.cpp  tcountingmanager.h  tcountlangmodel.cpp  tcountlangmodel.h  tgetfile.cpp  tgetfile.h  tglob.cpp  tglob.h  (+24 more)
src/+android/: qtquickcontrols2.conf
src/android/: tandroid.cpp  tandroid.h
src/qml/: ActivPalette.qml  Background.qml  BeatFileDialog.qml  CompositionView.qml  CountingLangPop.qml  CuteButton.qml  DisblPalette.qml  DragDelegate.qml  DrawerButton.qml  FM.qml  HelpPop.qml  InfoPage.qml  LinkText.qml  Logo.qml  MainDrawerContent.qml  MainMenuButton.qml  MainWindow.qml  MaterialImport.qml  MeterDrawer.qml  MetroImage.qml  NextTempoPop.qml  PendulumMark.qml  SettingsPage.qml  SidePop.qml  Tdialog.qml  TempoEdit.qml  TempoPage.qml  TempoPartDelegate.qml  TipRect.qml  TspinBox.qml  VerbalCountEdit.qml  VerbalCountPage.qml  metronomek_qml.qrc
src/qml/+android/: qtquickcontrols2.conf
src/qml/+windows/: qtquickcontrols2.conf
src/qml/counting/: README.md
src/rtaudio/: CMakeLists.txt
translations/: CMakeLists.txt  metronomek_nl.qm  metronomek_nl.ts  metronomek_pl.qm  metronomek_pl.ts  metronomek_uk.ts  metronomek_xx.ts  template-metronomek_xx.ts
